# QuaZip

./: CMakeLists.txt  FindQuaZip.cmake  QuaZipConfig.cmake  QuaZipConfigVersion.cmake
cmake/: QuaZipConfig.cmake  QuaZipDependencies.cmake.in  build_options.cmake  find_zlib.cmake  target_properties.cmake
quazip/: CMakeLists.txt  JlCompress.cpp
quazip/cmake/: dependencies.cmake  find_qt.cmake  target_properties.cmake
quazip/quazip/: CMakeLists.txt  JlCompress.cpp
